@@ -1,182 +1,292 @@
 package com.vendorhub.product.service;
 
-import com.vendorhub.product.dto.*;
-import com.vendorhub.product.model.*;
-import com.vendorhub.product.repository.*;
+import com.vendorhub.product.dto.CategoryDTOs.CategoryResponse;
+import com.vendorhub.product.dto.ProductDTOs.*;
+import com.vendorhub.product.entity.Category;
+import com.vendorhub.product.entity.Product;
+import com.vendorhub.product.entity.ProductReview;
+import com.vendorhub.product.event.ProductEvents.*;
+import com.vendorhub.product.kafka.ProductEventProducer;
+import com.vendorhub.product.repository.CategoryRepository;
+import com.vendorhub.product.repository.ProductRepository;
+import com.vendorhub.product.repository.ProductReviewRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.math.BigDecimal;
+import java.nio.file.*;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
+@Transactional
 public class ProductService {
 
-    private final ProductRepository productRepository;
-    private final FavoriteRepository favoriteRepository;
-    private final ReviewRepository reviewRepository;
+    private final ProductRepository       productRepository;
+    private final CategoryRepository      categoryRepository;
+    private final ProductReviewRepository reviewRepository;
+    private final ProductEventProducer    eventProducer;
 
-    // ── Vendor operations ──────────────────────────────────────
-    public ProductDto createProduct(ProductRequest request, Long vendorId) {
+    private static final String UPLOAD_DIR       = "/app/uploads/";
+    private static final int    LOW_STOCK_THRESH = 5;
+
+    // ── Public browsing ───────────────────────────────────────────
+
+    @Transactional(readOnly = true)
+    public PagedResponse<ProductResponse> getApprovedProducts(int page, int size, String sort) {
+        Pageable p = PageRequest.of(page, size, parseSort(sort));
+        return toPagedResponse(
+            productRepository.findByApprovalStatusAndActiveTrue(Product.ApprovalStatus.APPROVED, p));
+    }
+
+    @Transactional(readOnly = true)
+    public PagedResponse<ProductResponse> searchProducts(String query, int page, int size) {
+        return toPagedResponse(
+            productRepository.searchApproved(query, PageRequest.of(page, size)));
+    }
+
+    @Transactional(readOnly = true)
+    public PagedResponse<ProductResponse> getProductsByCategory(Long categoryId, int page, int size) {
+        return toPagedResponse(
+            productRepository.findApprovedByCategory(categoryId, PageRequest.of(page, size)));
+    }
+
+    @Transactional(readOnly = true)
+    public PagedResponse<ProductResponse> getProductsByPriceRange(BigDecimal min, BigDecimal max, int page, int size) {
+        return toPagedResponse(
+            productRepository.findApprovedByPriceRange(min, max, PageRequest.of(page, size)));
+    }
+
+    @Transactional(readOnly = true)
+    public ProductResponse getProductById(Long id) {
+        return ProductResponse.from(productRepository.findById(id)
+            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + id)));
+    }
+
+    // ── Vendor operations ─────────────────────────────────────────
+
+    public ProductResponse createProduct(Long vendorId, String vendorEmail, CreateProductRequest req) {
+        Category category = null;
+        if (req.getCategoryId() != null) {
+            category = categoryRepository.findById(req.getCategoryId()).orElse(null);
+        }
         Product product = Product.builder()
-                .name(request.getName())
-                .description(request.getDescription())
-                .price(request.getPrice())
-                .stock(request.getStock())
-                .imageUrl(request.getImageUrl())
-                .category(request.getCategory())
-                .vendorId(vendorId)
-                .status(ProductStatus.PENDING)
-                .build();
-        return toDto(productRepository.save(product));
+            .name(req.getName())
+            .description(req.getDescription())
+            .price(req.getPrice())
+            .stockQuantity(req.getStockQuantity())
+            .brand(req.getBrand())
+            .category(category)
+            .vendorId(vendorId)
+            .vendorEmail(vendorEmail)
+            .approvalStatus(Product.ApprovalStatus.PENDING)
+            .active(true)
+            .averageRating(0.0)
+            .totalReviews(0)
+            .build();
+        return ProductResponse.from(productRepository.save(product));
     }
 
-    public ProductDto updateProduct(Long productId, ProductRequest request, Long vendorId) {
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        if (!product.getVendorId().equals(vendorId)) {
-            throw new RuntimeException("Unauthorized");
+    public String uploadProductImage(Long productId, Long vendorId, MultipartFile file) throws IOException {
+        Product product = getVendorProduct(productId, vendorId);
+        String filename = UUID.randomUUID() + "_" + file.getOriginalFilename();
+        Path dir = Paths.get(UPLOAD_DIR);
+        Files.createDirectories(dir);
+        Files.copy(file.getInputStream(), dir.resolve(filename), StandardCopyOption.REPLACE_EXISTING);
+        String url = "/uploads/" + filename;
+        product.setImageUrl(url);
+        productRepository.save(product);
+        return url;
+    }
+
+    public ProductResponse updateProduct(Long productId, Long vendorId, UpdateProductRequest req) {
+        Product product = getVendorProduct(productId, vendorId);
+        int oldStock = product.getStockQuantity();
+
+        if (req.getName()        != null) product.setName(req.getName());
+        if (req.getDescription() != null) product.setDescription(req.getDescription());
+        if (req.getPrice()       != null) product.setPrice(req.getPrice());
+        if (req.getStockQuantity() != null) product.setStockQuantity(req.getStockQuantity());
+        if (req.getBrand()       != null) product.setBrand(req.getBrand());
+        if (req.getActive()      != null) product.setActive(req.getActive());
+        if (req.getCategoryId()  != null) {
+            categoryRepository.findById(req.getCategoryId()).ifPresent(product::setCategory);
         }
-        product.setName(request.getName());
-        product.setDescription(request.getDescription());
-        product.setPrice(request.getPrice());
-        product.setStock(request.getStock());
-        product.setImageUrl(request.getImageUrl());
-        product.setCategory(request.getCategory());
-        return toDto(productRepository.save(product));
-    }
 
-    public void deleteProduct(Long productId, Long vendorId) {
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        if (!product.getVendorId().equals(vendorId)) {
-            throw new RuntimeException("Unauthorized");
+        Product saved = productRepository.save(product);
+
+        if (req.getStockQuantity() != null
+                && saved.getStockQuantity() <= LOW_STOCK_THRESH
+                && oldStock > LOW_STOCK_THRESH) {
+            publishLowStock(saved);
         }
-        productRepository.delete(product);
+        return ProductResponse.from(saved);
     }
 
-    public List<ProductDto> getVendorProducts(Long vendorId) {
+    public void deleteVendorProduct(Long productId, Long vendorId) {
+        Product p = getVendorProduct(productId, vendorId);
+        p.setActive(false);
+        productRepository.save(p);
+    }
+
+    @Transactional(readOnly = true)
+    public List<ProductResponse> getVendorProducts(Long vendorId) {
         return productRepository.findByVendorId(vendorId)
-                .stream().map(this::toDto).collect(Collectors.toList());
+            .stream().map(ProductResponse::from).toList();
     }
 
-    // ── Admin operations ───────────────────────────────────────
-    public List<ProductDto> getPendingProducts() {
-        return productRepository.findByStatus(ProductStatus.PENDING)
-                .stream().map(this::toDto).collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<ProductResponse> getVendorLowStockProducts(Long vendorId) {
+        return productRepository.findLowStockByVendor(vendorId, LOW_STOCK_THRESH)
+            .stream().map(ProductResponse::from).toList();
     }
 
-    public ProductDto approveProduct(Long productId) {
+    // ── Admin operations ──────────────────────────────────────────
+
+    @Transactional(readOnly = true)
+    public PagedResponse<ProductResponse> getAllProducts(String status, int page, int size) {
+        Pageable p = PageRequest.of(page, size, Sort.by("createdAt").descending());
+        Page<Product> products = (status != null)
+            ? productRepository.findByApprovalStatus(
+                Product.ApprovalStatus.valueOf(status.toUpperCase()), p)
+            : productRepository.findAll(p);
+        return toPagedResponse(products);
+    }
+
+    public ProductResponse approveProduct(Long productId, boolean approve) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        product.setStatus(ProductStatus.APPROVED);
-        return toDto(productRepository.save(product));
+            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + productId));
+        product.setApprovalStatus(approve
+            ? Product.ApprovalStatus.APPROVED
+            : Product.ApprovalStatus.REJECTED);
+        Product saved = productRepository.save(product);
+
+        try {
+            eventProducer.publishProductApproved(ProductApprovedEvent.builder()
+                .productId(saved.getId())
+                .productName(saved.getName())
+                .vendorId(saved.getVendorId())
+                .vendorEmail(saved.getVendorEmail())
+                .approved(approve)
+                .processedAt(LocalDateTime.now())
+                .build());
+        } catch (Exception e) {
+            log.warn("Kafka ProductApprovedEvent failed: {}", e.getMessage());
+        }
+        return ProductResponse.from(saved);
     }
 
-    public ProductDto rejectProduct(Long productId) {
+    public void adminDeleteProduct(Long productId) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        product.setStatus(ProductStatus.REJECTED);
-        return toDto(productRepository.save(product));
+            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + productId));
+        product.setActive(false);
+        product.setApprovalStatus(Product.ApprovalStatus.REJECTED);
+        productRepository.save(product);
     }
 
-    public List<ProductDto> getAllProducts() {
-        return productRepository.findAll()
-                .stream().map(this::toDto).collect(Collectors.toList());
-    }
+    // ── Internal: called by order-service via Feign ───────────────
 
-    // ── Customer / public operations ───────────────────────────
-    public List<ProductDto> getApprovedProducts() {
-        return productRepository.findByStatus(ProductStatus.APPROVED)
-                .stream().map(this::toDto).collect(Collectors.toList());
-    }
-
-    public List<ProductDto> searchProducts(String keyword) {
-        return productRepository
-                .findByNameContainingIgnoreCaseAndStatus(keyword, ProductStatus.APPROVED)
-                .stream().map(this::toDto).collect(Collectors.toList());
-    }
-
-    public List<ProductDto> getByCategory(String category) {
-        return productRepository
-                .findByStatusAndCategory(ProductStatus.APPROVED, category)
-                .stream().map(this::toDto).collect(Collectors.toList());
-    }
-
-    public ProductDto getProductById(Long id) {
-        return toDto(productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found")));
-    }
-
-    // ── Favorites ──────────────────────────────────────────────
-    public void addFavorite(Long userId, Long productId) {
-        if (favoriteRepository.existsByUserIdAndProductId(userId, productId)) {
-            throw new RuntimeException("Already in favorites");
+    public void reduceStock(Long productId, int quantity) {
+        Product product = productRepository.findById(productId)
+            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + productId));
+        if (product.getStockQuantity() < quantity) {
+            throw new IllegalStateException(
+                "Insufficient stock for product: " + product.getName());
         }
-        favoriteRepository.save(Favorite.builder()
-                .userId(userId).productId(productId).build());
-    }
+        product.setStockQuantity(product.getStockQuantity() - quantity);
+        productRepository.save(product);
 
-    public void removeFavorite(Long userId, Long productId) {
-        Favorite fav = favoriteRepository.findByUserIdAndProductId(userId, productId)
-                .orElseThrow(() -> new RuntimeException("Favorite not found"));
-        favoriteRepository.delete(fav);
-    }
-
-    public List<ProductDto> getFavorites(Long userId) {
-        return favoriteRepository.findByUserId(userId).stream()
-                .map(f -> productRepository.findById(f.getProductId()).orElse(null))
-                .filter(p -> p != null)
-                .map(this::toDto)
-                .collect(Collectors.toList());
-    }
-
-    // ── Reviews ────────────────────────────────────────────────
-    public ReviewDto addReview(Long productId, Long userId,
-                               String userName, ReviewRequest request) {
-        if (reviewRepository.existsByUserIdAndProductId(userId, productId)) {
-            throw new RuntimeException("Already reviewed this product");
+        if (product.getStockQuantity() <= LOW_STOCK_THRESH) {
+            publishLowStock(product);
         }
-        Review review = Review.builder()
-                .productId(productId)
-                .userId(userId)
-                .userName(userName)
-                .rating(request.getRating())
-                .comment(request.getComment())
-                .build();
-        return toReviewDto(reviewRepository.save(review));
     }
 
-    public List<ReviewDto> getReviews(Long productId) {
+    // ── Reviews ───────────────────────────────────────────────────
+
+    public ReviewResponse addReview(Long productId, Long customerId,
+                                    String customerName, ReviewRequest req) {
+        Product product = productRepository.findById(productId)
+            .orElseThrow(() -> new IllegalArgumentException("Product not found"));
+        if (product.getApprovalStatus() != Product.ApprovalStatus.APPROVED) {
+            throw new IllegalStateException("Cannot review an unapproved product");
+        }
+        if (reviewRepository.findByProductIdAndCustomerId(productId, customerId).isPresent()) {
+            throw new IllegalStateException("You have already reviewed this product");
+        }
+        ProductReview review = ProductReview.builder()
+            .product(product)
+            .customerId(customerId)
+            .customerName(customerName)
+            .rating(req.getRating())
+            .comment(req.getComment())
+            .build();
+        reviewRepository.save(review);
+
+        Double avg   = reviewRepository.findAverageRatingByProductId(productId);
+        long   count = reviewRepository.countByProductId(productId);
+        product.setAverageRating(avg != null ? avg : 0.0);
+        product.setTotalReviews((int) count);
+        productRepository.save(product);
+        return ReviewResponse.from(review);
+    }
+
+    @Transactional(readOnly = true)
+    public List<ReviewResponse> getProductReviews(Long productId) {
         return reviewRepository.findByProductId(productId)
-                .stream().map(this::toReviewDto).collect(Collectors.toList());
+            .stream().map(ReviewResponse::from).toList();
     }
 
-    // ── Mappers ────────────────────────────────────────────────
-    private ProductDto toDto(Product p) {
-        return ProductDto.builder()
-                .id(p.getId())
-                .name(p.getName())
-                .description(p.getDescription())
-                .price(p.getPrice())
-                .stock(p.getStock())
-                .imageUrl(p.getImageUrl())
-                .category(p.getCategory())
+    // ── Helpers ───────────────────────────────────────────────────
+
+    private Product getVendorProduct(Long productId, Long vendorId) {
+        Product p = productRepository.findById(productId)
+            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + productId));
+        if (!p.getVendorId().equals(vendorId)) {
+            throw new SecurityException("Access denied: product does not belong to this vendor");
+        }
+        return p;
+    }
+
+    private void publishLowStock(Product p) {
+        try {
+            eventProducer.publishProductOutOfStock(ProductOutOfStockEvent.builder()
+                .productId(p.getId())
+                .productName(p.getName())
                 .vendorId(p.getVendorId())
-                .status(p.getStatus().name())
-                .build();
+                .vendorEmail(p.getVendorEmail())
+                .currentStock(p.getStockQuantity())
+                .occurredAt(LocalDateTime.now())
+                .build());
+        } catch (Exception e) {
+            log.warn("Kafka LowStockEvent failed: {}", e.getMessage());
+        }
     }
 
-    private ReviewDto toReviewDto(Review r) {
-        return ReviewDto.builder()
-                .id(r.getId())
-                .productId(r.getProductId())
-                .userId(r.getUserId())
-                .userName(r.getUserName())
-                .rating(r.getRating())
-                .comment(r.getComment())
-                .createdAt(r.getCreatedAt())
-                .build();
+    private PagedResponse<ProductResponse> toPagedResponse(Page<Product> page) {
+        PagedResponse<ProductResponse> r = new PagedResponse<>();
+        r.setContent(page.getContent().stream().map(ProductResponse::from).toList());
+        r.setPage(page.getNumber());
+        r.setSize(page.getSize());
+        r.setTotalElements(page.getTotalElements());
+        r.setTotalPages(page.getTotalPages());
+        return r;
+    }
+
+    private Sort parseSort(String sort) {
+        if (sort == null) return Sort.by("createdAt").descending();
+        return switch (sort) {
+            case "price_asc"  -> Sort.by("price").ascending();
+            case "price_desc" -> Sort.by("price").descending();
+            case "rating"     -> Sort.by("averageRating").descending();
+            default           -> Sort.by("createdAt").descending();
+        };
     }
 }
